--- a/k8s/production.yaml
+++ b/k8s/production.yaml
@@ -19,7 +19,9 @@ spec:
                       - containerPort: 8080
                   env:
                       - name: POSTGRES_HOST
-                        value: "ip-10-240-37-138.ap-northeast-2.compute.internal:27017"
+                        value: "ip-10-240-37-138.ap-northeast-2.compute.internal"
+                      - name: POSTGRES_PORT
+                        value: "27017"
                       - name: POSTGRES_DB
                         value: "gin_sqlx_crud"
                       - name: POSTGRES_USER
